
Current goal:
    * update COPY operation
    * use COPY operation where it makes sense, e.g.,
        terminal cases in cross-forest unions

    * add forest utility:
        node_handle removeIdentityEdge(int fromlevel, unsigned from, node_handle p)

        returns p most of the time, and quickly.
        If the forest is identity-reduced, AND fromlevel is unprimed,
        AND node p is at the level below fromlevel, AND node p is a
        singleton node, AND from is the index of the singleton node,
        THEN we return p's downward pointer.

    * use removeIdentityEdge when building relation nodes in new operations

Interface changes (aside from moving header files around)
======================================================================

Make compute table interface easier to use for simple operations
    (i.e., most of the time)

Updates to operation interface:

    * Add a 'temporary' node handle in unpacked_node,
      will be marked during mark and sweep

    * Allow (back) low-level interface


Operation updates, to do:
    * re-implement operations using new CT interface
        start with intersection and check timing

    * eventually: remove CTs from operation base class
    * eventually: remove entry registration from operation base class



Next release:

Finish Reimplementing operations.


======================================================================

generic EV 'operator' for edges should provide:

    // Combine edge values a and b, store result in c
    static inline void apply(const edge_value &a, const edge_value &b,
        edge_value &c);

    // Combine edge values a and b, store result in a
    static inline void update(edge_value &a, const edge_value &b);

    // "Clear" an edge value; i.e., make it the identity element
    static inline void clear(edge_value &a);

======================================================================
Completely reimplemented operations